--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
     <title>Document</title>
 </head>
 <body>
-    
+    <ul class="buttons">
+      <li><button class='btn' id="rock">Rock</button></li>
+      <li><button class='btn' id="paper">Paper</button></li>
+      <li><button class='btn' id="scissors">Scissors</button></li>
+    </ul>
 </body>
 </html>
