--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
       <li><button class='btn' id="paper">Paper</button></li>
       <li><button class='btn' id="scissors">Scissors</button></li>
     </ul>
+    <div class="result"></div>
 </body>
 </html>
