--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
       <li><button class='btn' id="scissors">Scissors</button></li>
     </ul>
     <div class="result"></div>
+    <div class="score">The score is 0:0</div>
 </body>
 </html>
