--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <ul class="buttons">
-      <li><button class='btn' id="rock">Rock</button></li>
-      <li><button class='btn' id="paper">Paper</button></li>
-      <li><button class='btn' id="scissors">Scissors</button></li>
+      <li><button class='btn' value="rock">Rock</button></li>
+      <li><button class='btn' value="paper">Paper</button></li>
+      <li><button class='btn' value="scissors">Scissors</button></li>
     </ul>
     <div class="result"></div>
     <div class="score">The score is 0:0</div>
